#11073 alert 폰트 약간 크게 (-> 1rem)

--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -445,7 +445,7 @@ $alert-border-width:                         0.0625rem; // 1px
 $alert-bg-color:                             $white;
 $alert-box-shadow-color:                     $gray400;
 
-$alert-font-size:                            $font-size-xs;
+$alert-font-size:                            $font-size-s;
 $alert-font-weight:                          $font-weight-medium;
 $alert-margin-size:                          0.3125rem;  // 5px
 $alert-box-sizing:                           border-box;
