#11326 [신청서] 임시 상태인 신청서와 사용 상태의 신청서가 구분이 갔으면 좋겠다.(MR 피드백 적용)

--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -202,14 +202,11 @@
       }
       //임시신청서 상태 표기
       .document-temp-status {
-        width: 5.3125rem; //85px
-        height: 2.0625rem; //33px
-        font-size: 0.8rem;
+        padding: 0.625rem; // 10px
+        font-size: $font-size-xs; // 14px
         color: $white;
         background-color: $gray300;
-        text-align: center;
-        padding-top: 10px;
-        @include borderRadius($tag-border-radius); // 8px
+        @include borderRadius(0.5rem); // 8px
       }
     }
     // 대시보드 > 소제목
