--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -273,14 +273,11 @@
     }
     //임시신청서 상태 표기
     .document-temp-status {
-      width: 5.3125rem; //85px
-      height: 2.0625rem; //33px
-      padding: 0.4rem; //6px
-      vertical-align: text-top;
-      font-size: 0.8rem;
+      padding: 0.625rem; // 10px
+      font-size: $font-size-xs; // 14px
       color: $white;
       background-color: $gray300;
-      @include borderRadius($tag-border-radius); // 8px
+      @include borderRadius(0.5rem); // 8px
     }
   }
 }
