로딩 및 검색, 스크롤 시에 progressbar가 보이도록 작업

--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -94,7 +94,8 @@
 
     function restSubmit(method, url, isScroll) {
         aliceJs.fetchJson(url, {
-            method: method
+            method: method,
+            showProgressbar: true
         }).then((imageList) => {
             if (creatable === 'true') {
                 addThumbnailUpload();
