--- a/src/main/resources/public/template/board/boardEdit.html
+++ b/src/main/resources/public/template/board/boardEdit.html
@@ -201,8 +201,22 @@
 
         //게시판 관리 삭제
         function deleteBoardAdmin() {
-            zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/boards/' +
-                boardAdminId);
+            zAlert.confirm(i18n.msg('common.msg.confirmDelete'), () => {
+                aliceJs.fetchText('/rest/boards/' + boardAdminId, {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                }).then((rtn) => {
+                    if (rtn === 'true') {
+                        zAlert.success(i18n.msg('common.msg.delete'), () => {
+                            location.href = '/boards/search';
+                        });
+                    } else {
+                        zAlert.danger(i18n.msg('common.msg.fail'));
+                    }
+                });
+            })
         }
 
         //게시판 관리 저장
@@ -244,31 +258,19 @@
 
         //REST API
         function restSubmit(method, url, data) {
-            let resultMsg = '';
-            if (method === 'put' || method === 'post') {
-                resultMsg = i18n.msg('common.msg.save');
-            } else if (method === 'delete') {
-                resultMsg = i18n.msg('common.msg.delete');
-            }
-
             const opt = {
                 method: method,
                 url: url,
                 params: JSON.stringify(data),
                 contentType: 'application/json',
                 callbackFunc: function (response) {
-                    let result = response.responseText === "true" ? true : false;
+                    let result = response.responseText === "true";
                     if (result) {
-                        zAlert.success(resultMsg, function () {
+                        zAlert.success(i18n.msg('common.msg.save'), function () {
                             location.href = '/boards/search';
                         });
                     } else {
-                        if (method == 'delete') {
-                            resultMsg = i18n.msg('common.msg.fail');
-                        } else {
-                            resultMsg = i18n.msg('board.msg.duplicateBoardAdminTitle');
-                        }
-                        zAlert.warning(resultMsg);
+                        zAlert.warning(i18n.msg('board.msg.duplicateBoardAdminTitle'));
                     }
                 },
                 showProgressbar: false
