--- a/src/main/resources/public/template/chart/chartEdit.html
+++ b/src/main/resources/public/template/chart/chartEdit.html
@@ -256,18 +256,24 @@
      * chart 삭제
      */
     function deleteChart() {
-        zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/charts/' +
-            chartId, {}, function (result) {
-            switch (result) {
-                case STATUS_SUCCESS:
-                    zAlert.success('[[#{common.msg.delete}]]', function () {
-                        window.location.href = '/charts/search';
-                    });
-                    break;
-                default:
-                    zAlert.danger(i18n.msg('common.msg.fail'));
-                    break;
-            }
+        zAlert.confirm(i18n.msg('common.msg.confirmDelete'),  () => {
+            aliceJs.fetchText('/rest/charts/' + chartId, {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            }).then((rtn) => {
+                switch (rtn) {
+                    case STATUS_SUCCESS:
+                        zAlert.success(/*[[#{common.msg.delete}]]*/'', function () {
+                            window.location.href = '/charts/search';
+                        });
+                        break;
+                    default:
+                        zAlert.danger(i18n.msg('common.msg.fail'));
+                        break;
+                }
+            });
         });
     }
 
