--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -79,13 +79,10 @@
             params: JSON.stringify(formObj),
             contentType: 'application/json',
             callbackFunc: function (response) {
-                let result = response.responseText == "true" ? true : false;
+                let result = response.responseText === "true";
                 let resultMsg = [[#{faq.msg.duplicateTitleInCategory}]];
                 if (result) {
                     resultMsg = [[#{common.msg.save}]];
-                    if (method.toLowerCase() === 'delete') {
-                        resultMsg = [[#{common.msg.delete}]];
-                    }
                     zAlert.success(resultMsg, function () {
                         window.location.href = '/faqs/search';
                     });
@@ -121,7 +118,22 @@
                 restSubmit('put', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
             });
             document.getElementById('btnDelete').addEventListener('click', function () {
-                zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', [[@{/rest/faqs/{faqId}(faqId=${faq?.faqId})}]]);
+                zAlert.confirm(i18n.msg('common.msg.confirmDelete'),  () => {
+                    aliceJs.fetchText('/rest/faqs/' + /*[[${faq?.faqId}]]*/'', {
+                        method: 'DELETE',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                    }).then((rtn) => {
+                        if (rtn === 'true') {
+                            zAlert.success(i18n.msg('common.msg.delete'), () => {
+                                location.href = '/faqs/search';
+                            });
+                        } else {
+                            zAlert.danger(i18n.msg('common.msg.fail'));
+                        }
+                    });
+                });
             });
         }
         OverlayScrollbars(document.querySelector('.z-page-content'), { className: 'scrollbar' });
