--- a/src/main/resources/public/template/formDesigner/formSearch.html
+++ b/src/main/resources/public/template/formDesigner/formSearch.html
@@ -92,14 +92,21 @@
 
     // 폼 삭제
     function deleteForm(formId) {
-        zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/forms/' + formId, function(result) {
-            if (result === 'true') {
-                zAlert.success(i18n.msg('common.msg.delete'), function() {
-                    location.reload();
-                });
-            } else {
-                zAlert.danger(i18n.msg('form.msg.failedFormDelete'));
-            }
+        zAlert.confirm(i18n.msg('common.msg.confirmDelete'), () => {
+            aliceJs.fetchText('/rest/forms/' + formId, {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+            }).then((rtn) => {
+                if (rtn === 'true') {
+                    zAlert.success(i18n.msg('common.msg.delete'), function() {
+                        location.reload();
+                    });
+                } else {
+                    zAlert.danger(i18n.msg('common.msg.fail'));
+                }
+            });
         });
     }
 
