--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -133,19 +133,19 @@
     function setDisplay(viewId, swithElement) {
         if (swithElement.checked) {
             if (viewId === 'popTab') {
-                const popStrtDtVal = /*[[${notice?.popStrtDt}]]*/;
-                const popEndDtVal = /*[[${notice?.popEndDt}]]*/;
+                const popStrtDtVal = /*[[${notice?.popStrtDt}]]*/'';
+                const popEndDtVal = /*[[${notice?.popEndDt}]]*/'';
                 const popStrtDtElement = document.getElementById('popStrtDt');
                 const popEndDtElement = document.getElementById('popEndDt');
-                document.getElementById('popWidth').value = /*[[${notice?.popWidth} ? ${notice.popWidth} : 500]]*/;
-                document.getElementById('popHeight').value = /*[[${notice?.popHeight} ? ${notice.popHeight} : 500]]*/;
+                document.getElementById('popWidth').value = /*[[${notice?.popWidth} ? ${notice.popWidth} : 500]]*/'';
+                document.getElementById('popHeight').value = /*[[${notice?.popHeight} ? ${notice.popHeight} : 500]]*/'';
                 popStrtDtElement.value = popStrtDtVal ? i18n.userDateTime(popStrtDtVal) : i18n.getDateTime();
                 popEndDtElement.value = popEndDtVal ? i18n.userDateTime(popEndDtVal) : i18n.getDateTime({'days':30});
                 zDateTimePicker.initDateTimePicker(popStrtDtElement);
                 zDateTimePicker.initDateTimePicker(popEndDtElement);
             } else if (viewId === 'topNoticeTab') {
-                const topNoticeStrtDtVal = /*[[${notice?.topNoticeStrtDt}]]*/;
-                const topNoticeEndDtVal = /*[[${notice?.topNoticeEndDt}]]*/;
+                const topNoticeStrtDtVal = /*[[${notice?.topNoticeStrtDt}]]*/'';
+                const topNoticeEndDtVal = /*[[${notice?.topNoticeEndDt}]]*/'';
                 const topNoticeStrtDtElement = document.getElementById('topNoticeStrtDt');
                 const topNoticeEndDtElement = document.getElementById('topNoticeEndDt');
                 topNoticeStrtDtElement.value = topNoticeStrtDtVal ? i18n.userDateTime(topNoticeStrtDtVal) : i18n.getDateTime();
@@ -232,7 +232,18 @@
     }
 
     function deleteNotice() {
-        zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/notices/' + [[${notice?.noticeNo}]]);
+        zAlert.confirm(i18n.msg('common.msg.confirmDelete'), () => {
+            aliceJs.fetchText('/rest/notices/' + [[${notice?.noticeNo}]], {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+            }).then((rtn) => {
+                zAlert.success(i18n.msg('common.msg.delete'), () => {
+                    location.href = '/notices/search';
+                });
+            });
+        });
     }
 
     function restSubmit(method, url, data) {
@@ -248,10 +259,6 @@
                     });
                 } else if (method === 'put') {
                     zAlert.success(i18n.msg('common.msg.modify'), function () {
-                        window.location = '/notices/search';
-                    });
-                } else if (method === 'delete') {
-                    zAlert.success(i18n.msg('common.msg.delete'), function () {
                         window.location = '/notices/search';
                     });
                 } else {
