--- a/src/main/resources/public/template/report/reportTemplateEdit.html
+++ b/src/main/resources/public/template/report/reportTemplateEdit.html
@@ -192,7 +192,25 @@
                 restSubmit(method, url, data);
             }
         } else if (method === 'delete') {
-            zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/reports/template/' + /*[[${template?.templateId}]]*/'');
+            zAlert.confirm(i18n.msg('common.msg.confirmDelete'), () => {
+                aliceJs.fetchText('/rest/reports/template/' + /*[[${template?.templateId}]]*/'', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                }).then((rtn) => {
+                    switch (JSON.parse(rtn).code) {
+                        case STATUS_SUCCESS:
+                            zAlert.success(i18n.msg('common.msg.delete'), function () {
+                                location.href = '/reports/template/search';
+                            });
+                            break;
+                        default:
+                            zAlert.danger(i18n.msg('common.msg.fail'));
+                            break;
+                    }
+                });
+            });
         }
     }
 
@@ -205,31 +223,18 @@
             contentType: 'application/json',
             callbackFunc: function (response) {
                 let result = JSON.parse(response.responseText);
-                if (method === 'post' || method === 'put') {
-                    switch (result.code) {
-                        case STATUS_SUCCESS:
-                            zAlert.success(i18n.msg('common.msg.save'), function () {
-                                location.href = '/reports/template/search';
-                            });
-                            break;
-                        case STATUS_ERROR_TEMPLATE_NAME_DUPLICATION:
-                            zAlert.success(i18n.msg('report.msg.templateNameUsed'));
-                            break;
-                        default :
-                            zAlert.danger(i18n.msg('common.msg.fail'));
-                            break;
-                    }
-                } else if (method === 'delete') {
-                    switch (result.code) {
-                        case STATUS_SUCCESS:
-                            zAlert.success(i18n.msg('common.msg.delete'), function () {
-                                location.href = '/reports/template/search';
-                            });
-                            break;
-                        default:
-                            zAlert.danger(i18n.msg('common.msg.fail'));
-                            break;
-                    }
+                switch (result.code) {
+                    case STATUS_SUCCESS:
+                        zAlert.success(i18n.msg('common.msg.save'), function () {
+                            location.href = '/reports/template/search';
+                        });
+                        break;
+                    case STATUS_ERROR_TEMPLATE_NAME_DUPLICATION:
+                        zAlert.success(i18n.msg('report.msg.templateNameUsed'));
+                        break;
+                    default :
+                        zAlert.danger(i18n.msg('common.msg.fail'));
+                        break;
                 }
             }
         };
