--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -310,7 +310,28 @@
                 restSubmit(method, url, data);
             }
         } else if (method === 'delete') {
-            zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/schedulers/' + /*[[${schedule?.taskId}]]*/'');
+            zAlert.confirm(i18n.msg('common.msg.confirmDelete'), () => {
+                aliceJs.fetchText('/rest/schedulers/' + /*[[${schedule?.taskId}]]*/'', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                }).then((rtn) => {
+                    switch (rtn) {
+                        case STATUS_SUCCESS:
+                            zAlert.success(i18n.msg('common.msg.delete'), function () {
+                                location.href = '/schedulers/search';
+                            });
+                            break;
+                        case STATUS_ERROR_SCHEDULE_USED:
+                            zAlert.warning(i18n.msg('scheduler.msg.useSchedule'));
+                            break;
+                        default:
+                            zAlert.danger(i18n.msg('common.msg.fail'));
+                            break;
+                    }
+                });
+            });
         }
     }
 
@@ -373,20 +394,6 @@
                             break;
                         case STATUS_ERROR_SCHEDULER_EXECUTE:
                             zAlert.warning(i18n.msg('common.msg.fail'));
-                            break;
-                        default:
-                            zAlert.danger(i18n.msg('common.msg.fail'));
-                            break;
-                    }
-                } else if (method === 'delete'){
-                    switch (response.responseText) {
-                        case STATUS_SUCCESS:
-                            zAlert.success(i18n.msg('common.msg.delete'), function () {
-                                location.href = '/schedulers/search';
-                            });
-                            break;
-                        case STATUS_ERROR_SCHEDULE_USED:
-                            zAlert.warning(i18n.msg('scheduler.msg.useSchedule'));
                             break;
                         default:
                             zAlert.danger(i18n.msg('common.msg.fail'));
