--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -108,15 +108,13 @@
             }
 
             if (document.getElementById('prev-document-status').value === STATUS_TEMPORARY && documentInfo.documentStatus === STATUS_USE) { // 수정
-                zAlert.confirm(
-                    i18n.msg('document.msg.changeStatusEnabled'),
-                    () => restSubmit(method, url + '?isDeleteData=true', documentInfo, function() {
-                        zAlert.success(i18n.msg('common.msg.save'), function() {
+                zAlert.confirm(i18n.msg('document.msg.changeStatusEnabled'), () => {
+                    restSubmit(method, url + '?isDeleteData=true', documentInfo, () => {
+                        zAlert.success(i18n.msg('common.msg.save'), () => {
                             location.reload();
                         });
-                    }),
-                    null
-                );
+                    })
+                });
             } else {
                 restSubmit(method, url, documentInfo, function(result) {
                     zAlert.success(i18n.msg('common.msg.save'), function() {
@@ -310,16 +308,22 @@
     }
 
     function deleteDocument(documentId) {
-        zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/workflows/' +
-            documentId, {}, function(result) {
-            if (JSON.parse(result)) {
-                zAlert.success([[#{common.msg.delete}]], function() {
-                    location.reload();
-                });
-            } else {
-                zAlert.warning([[#{document.msg.launchedInstance}]]);
-            }
-        }, false);
+        zAlert.confirm(i18n.msg('common.msg.confirmDelete'), () => {
+            aliceJs.fetchText('/rest/workflows/' + documentId, {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+            }).then((rtn) => {
+                if (JSON.parse(rtn)) {
+                    zAlert.success([[#{common.msg.delete}]], function() {
+                        location.reload();
+                    });
+                } else {
+                    zAlert.warning([[#{document.msg.launchedInstance}]]);
+                }
+            });
+        });
     }
 
     function restSubmit(method, url, data, result, isShowProgressbar) {
