#11320 - [문서함] 문서함에서 문서함 컬러가 표기안되는 케이스가 있다.
* text-ellipsis 클래스로 되어 있었는데 말줄임이 되지를 않고 있었다.
  - 팀장님께 물어본 결과 말줄임 보다는 줄바꿈이 낫다라고 하셔 text-ellipsis 에서 text-wordWrap으로 수정하였다.

--- a/src/main/resources/public/template/token/tokenList.html
+++ b/src/main/resources/public/template/token/tokenList.html
@@ -16,8 +16,8 @@
             <div class="z-document-row flex-fill flex-row justify-content-between">
                 <div class="z-document-row-content">
                     <div class="z-document-title flex-row align-items-center">
-                        <h3 th:text="${token.documentName}" class="mr-2 text-ellipsis"></h3>
-                        <span th:text="${token.documentNo}" class="z-document-numbering text-ellipsis mr-2"></span>
+                        <h3 th:text="${token.documentName}" class="mr-2 text-wordWrap"></h3>
+                        <span th:text="${token.documentNo}" class="z-document-numbering text-wordWrap mr-2"></span>
                         <span th:if="${token.documentStatus} == 'document.status.temporary'"
                               th:text="#{document.label.tempDocument}" class="document-temp-status"></span>
                     </div>
