--- a/src/main/resources/public/template/formDesigner/formList.html
+++ b/src/main/resources/public/template/formDesigner/formList.html
@@ -10,7 +10,7 @@
         <tr class="flex-row align-items-center">
             <th width="20%" class="align-left" th:text="#{form.label.name}"></th>
             <th width="10%" class="align-center" th:text="#{common.label.preview}"></th>
-            <th width="10%" class="align-center" th:text="#{common.label.update}"></th>
+            <th width="10%" class="align-center" th:text="#{common.label.edit}"></th>
             <th width="10%" class="align-center" th:text="#{form.label.state}"></th>
             <th width="28%" class="align-left" th:text="#{form.label.description}"></th>
             <th width="10%" class="align-left" th:text="#{common.label.writer}"></th>
