--- a/src/main/resources/public/template/process/processList.html
+++ b/src/main/resources/public/template/process/processList.html
@@ -10,7 +10,7 @@
         <tr class="flex-row align-items-center">
             <th style="width: 20%" class="align-left" th:text="#{process.label.name}"></th>
             <th style="width: 10%" class="align-center" th:text="#{process.label.simulation}"></th>
-            <th style="width: 10%" class="align-center" th:text="#{common.label.update}"></th>
+            <th style="width: 10%" class="align-center" th:text="#{common.label.edit}"></th>
             <th style="width: 10%" class="align-center" th:text="#{process.label.state}"></th>
             <th style="width: 28%" class="align-left" th:text="#{process.label.description}"></th>
             <th style="width: 10%" class="align-left" th:text="#{common.label.writer}"></th>
