#10985 용어정리 - #5 작성자, 등록자 소스 정리

--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -30,7 +30,7 @@
                 <div id="dropZoneUploadedFiles"></div>
             </div>
             <div class="flex-column z-edit-row">
-                <label th:text="#{common.label.writer}"></label>
+                <label th:text="#{common.label.createUser}"></label>
                 <input type="text" class="z-input" th:value="${notice?.createUserName} ? ${notice.createUserName} : ${#authentication.details.userName}"
                        disabled/>
             </div>
