--- a/src/main/resources/public/template/chart/chartList.html
+++ b/src/main/resources/public/template/chart/chartList.html
@@ -12,8 +12,8 @@
             <th style="width: 20%;" class="align-left" th:text="#{chart.label.type}"></th>
             <th style="width: 25%;" class="align-left" th:text="#{chart.label.description}"></th>
             <th style="width: 10%;" class="align-center" th:text="#{common.label.preview}"></th>
-            <th style="width: 10%;" class="align-left" th:text="#{common.label.writer}"></th>
-            <th style="width: 15%;" class="align-left" th:text="#{common.label.writeDate}"></th>
+            <th style="width: 10%;" class="align-left" th:text="#{common.label.createUser}"></th>
+            <th style="width: 15%;" class="align-left" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
     <tbody class="z-list-body">
