--- a/src/main/resources/public/template/custom-code/customCodeList.html
+++ b/src/main/resources/public/template/custom-code/customCodeList.html
@@ -10,8 +10,8 @@
         <tr class="flex-row align-items-center">
             <th style="width:50%" class="align-left" th:text="#{customCode.label.name}"></th>
             <th style="width:20%" class="align-left" th:text="#{customCode.label.type}"></th>
-            <th style="width:15%" class="align-left" th:text="#{common.label.writer}"></th>
-            <th style="width:15%" class="align-left" th:text="#{common.label.writeDate}"></th>
+            <th style="width:15%" class="align-left" th:text="#{common.label.createUser}"></th>
+            <th style="width:15%" class="align-left" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
     <tbody class="z-list-body">
