--- a/src/main/resources/public/template/download/downloadList.html
+++ b/src/main/resources/public/template/download/downloadList.html
@@ -12,8 +12,8 @@
             <th style="width:10%;" class="align-center" th:text="#{download.label.category}"></th>
             <th style="width:45%;" class="align-left" th:text="#{common.label.title}"></th>
             <th style="width:10%;" class="align-center" th:text="#{download.label.views}"></th>
-            <th style="width:10%;" class="align-center" th:text="#{common.label.writer}"></th>
-            <th style="width:20%;" class="align-center" th:text="#{common.label.writeDate}"></th>
+            <th style="width:10%;" class="align-center" th:text="#{common.label.createUser}"></th>
+            <th style="width:20%;" class="align-center" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
     <tbody class="z-list-body">
