--- a/src/main/resources/public/template/formDesigner/formList.html
+++ b/src/main/resources/public/template/formDesigner/formList.html
@@ -13,8 +13,8 @@
             <th width="10%" class="align-center" th:text="#{common.label.edit}"></th>
             <th width="10%" class="align-center" th:text="#{form.label.state}"></th>
             <th width="28%" class="align-left" th:text="#{form.label.description}"></th>
-            <th width="10%" class="align-left" th:text="#{common.label.writer}"></th>
-            <th width="12%" class="align-left" th:text="#{common.label.writeDate}"></th>
+            <th width="10%" class="align-left" th:text="#{common.label.createUser}"></th>
+            <th width="12%" class="align-left" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
     <tbody class="z-list-body">
