--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -7,10 +7,10 @@
         <tr class="flex-row align-items-center">
             <th style="width:30%;" class="align-left" th:text="#{common.label.title}"></th>
             <th style="width:5%;" class="align-center" th:text="#{notice.label.popUp}"></th>
-            <th style="width:10%;" class="align-center" th:text="#{common.label.writer}"></th>
+            <th style="width:10%;" class="align-center" th:text="#{common.label.createUser}"></th>
             <th style="width:20%;" class="align-left" th:text="#{notice.label.popUpPeriod}"></th>
             <th style="width:20%;" class="align-left" th:text="#{notice.label.noticePeriod}"></th>
-            <th style="width:15%;" class="align-left" th:text="#{common.label.writeDate}"></th>
+            <th style="width:15%;" class="align-left" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
     <tbody class="z-list-body">
