--- a/src/main/resources/public/template/portal/download/downloadList.html
+++ b/src/main/resources/public/template/portal/download/downloadList.html
@@ -8,8 +8,8 @@
             <th style="width:5%;" th:text="#{download.label.seq}"></th>
             <th style="width:10%;" th:text="#{download.label.category}"></th>
             <th style="width:45%;" th:text="#{common.label.title}"></th>
-            <th style="width:10%;" th:text="#{common.label.writer}"></th>
-            <th style="width:20%;" th:text="#{common.label.writeDate}"></th>
+            <th style="width:10%;" th:text="#{common.label.createUser}"></th>
+            <th style="width:20%;" th:text="#{common.label.createDate}"></th>
             <th style="width:10%;" th:text="#{download.label.views}"></th>
         </tr>
     </thead>
