--- a/src/main/resources/public/template/process/processList.html
+++ b/src/main/resources/public/template/process/processList.html
@@ -13,8 +13,8 @@
             <th style="width: 10%" class="align-center" th:text="#{common.label.edit}"></th>
             <th style="width: 10%" class="align-center" th:text="#{process.label.state}"></th>
             <th style="width: 28%" class="align-left" th:text="#{process.label.description}"></th>
-            <th style="width: 10%" class="align-left" th:text="#{common.label.writer}"></th>
-            <th style="width: 12%" class="align-left" th:text="#{common.label.writeDate}"></th>
+            <th style="width: 10%" class="align-left" th:text="#{common.label.createUser}"></th>
+            <th style="width: 12%" class="align-left" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
     <tbody class="z-list-body">
