--- a/src/main/resources/public/template/report/reportTemplateList.html
+++ b/src/main/resources/public/template/report/reportTemplateList.html
@@ -9,8 +9,8 @@
         <th style="width:25%;" class="align-left" th:text="#{report.label.templateName}"></th>
         <th style="width:20%;" class="align-left" th:text="#{report.label.description}"></th>
         <th style="width:25%;" class="align-left" th:text="#{report.label.chart}"></th>
-        <th style="width:10%;" class="align-center" th:text="#{common.label.writer}"></th>
-        <th style="width:15%;" class="align-center" th:text="#{common.label.writeDate}"></th>
+        <th style="width:10%;" class="align-center" th:text="#{common.label.createUser}"></th>
+        <th style="width:15%;" class="align-center" th:text="#{common.label.createDate}"></th>
         <th style="width:5%;" class="align-center"></th>
     </tr>
     </thead>
