--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3324,9 +3324,10 @@ select {
 .z-document-content .document-column {
   width: 100%;
   height: 100%;
-  padding: 1.975rem;
+  padding: 1.5625rem;
 }
 .z-document-content .document-column .document-name {
+  width: 17.5rem;
   font-size: 1.5rem;
   font-weight: 500;
 }
@@ -3346,8 +3347,8 @@ select {
   margin-top: 0.625rem;
 }
 .z-document-content .document-column .document-temp-status {
-  padding: 0.625rem;
-  font-size: 0.875rem;
+  padding: 0.375rem;
+  font-size: 0.75rem;
   color: #FFFFFF;
   background-color: #CFD5D9;
   border-radius: 0.5rem;
