--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -250,9 +250,10 @@
   .document-column {
     width: 100%;
     height: 100%;
-    padding: 1.975rem; // 30px
+    padding: 1.5625rem; // 25px
     //신청서 문서이름
     .document-name {
+      width: 17.5rem; //280px
       font-size: $font-size-l;
       font-weight: $font-weight-medium;
     }
@@ -273,8 +274,8 @@
     }
     //임시신청서 상태 표기
     .document-temp-status {
-      padding: 0.625rem; // 10px
-      font-size: $font-size-xs; // 14px
+      padding: 0.375rem; // 6px
+      font-size: $font-size-xxs; // 12px
       color: $white;
       background-color: $gray300;
       @include borderRadius(0.5rem); // 8px
