--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -202,8 +202,8 @@
       }
       //임시신청서 상태 표기
       .document-temp-status {
-        padding: 0.625rem; // 10px
-        font-size: $font-size-xs; // 14px
+        padding: 0.375rem; // 6px
+        font-size: $font-size-xxs; // 12px
         color: $white;
         background-color: $gray300;
         @include borderRadius(0.5rem); // 8px
