--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -487,8 +487,9 @@
     //신청서 > 카드
     .document-card {
       min-width: auto;
-      width: calc((100% - 3.75rem) / 3);
+      width: 30.625rem; //490px
       min-height: 11.5625rem; //185px
+      margin-right: 1.875rem; //30px
     }
 
     // 데이터 없을 때
