#11241 - 검색 시, 리스트 출력 디자인결함
* 포탈 화면에서 검색 시, 내용에서만 검색과 일치하는 부분이 파란 디자인으로 수정되어 출력, 타이틀 부분도 파란 디자인으로 수정하여 출력으로 변경

--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -1100,6 +1100,9 @@ input, button, select, optgroup, textarea {
 .z-portal-container .z-main .z-main-content .z-main-card .z-card-list .z-card-row .z-card-item-title a {
   color: #222529;
 }
+.z-portal-container .z-main .z-main-content .z-main-card .z-card-list .z-card-row .z-card-item-title a .keyword {
+  color: #339AF0;
+}
 .z-portal-container .z-main .z-main-content .z-main-card .z-card-list .z-card-row .z-card-item-content {
   font-size: 1rem;
   font-weight: 400;
