--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -201,6 +201,10 @@
                     });
 
                     if (isNotEmpty('searchValue')) {
+                        document.querySelectorAll('.z-card-row > .z-card-item-box > .z-card-item-title > a').forEach(function(data) {
+                            const regex = new RegExp(document.getElementById('searchValue').value, 'gi');
+                            data.innerHTML = data.textContent.replace(regex, "<span class='keyword'>" + document.getElementById('searchValue').value + "</span>");
+                        });
                         document.querySelectorAll('.z-card-row > .z-card-item-box > .z-card-item-content > .text-ellipsis').forEach(function(data) {
                             const regex = new RegExp(document.getElementById('searchValue').value, 'gi');
                             data.innerHTML = data.textContent.replace(regex, "<span class='keyword'>" + document.getElementById('searchValue').value + "</span>");
