#11332 [스케쥴러] 없는 jar파일을 입력했는데 작업이 성공한다. -> 일감 관련 분석 및 수정 진행

--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -163,6 +163,7 @@
     const STATUS_ERROR_SCHEDULE_USED = '1';
     const STATUS_ERROR_SCHEDULE_NAME_DUPLICATION = '2';
     const STATUS_ERROR_SCHEDULER_EXECUTE = '3';
+    const STATUS_ERROR_SCHEDULER_JAR_NOT_EXIST = '4';
 
     window.onload = function() {
         changeContainer(document.getElementById('taskType').value);
@@ -361,6 +362,9 @@
                             break;
                         case STATUS_ERROR_SCHEDULE_NAME_DUPLICATION:
                             zAlert.warning(i18n.msg('scheduler.msg.duplicateTaskName'));
+                            break;
+                        case STATUS_ERROR_SCHEDULER_JAR_NOT_EXIST:
+                            zAlert.warning(i18n.msg('scheduler.msg.jarNotExist'));
                             break;
                         default :
                             zAlert.danger(i18n.msg('common.msg.fail'));
