--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -1571,10 +1571,10 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   cursor: default;
 }
 .z-input.error {
-  border: 0.0625rem solid #F52525;
+  border: 0.0625rem solid #F52525 !important;
 }
 .z-input.success {
-  border: 0.0625rem solid #76BD26;
+  border: 0.0625rem solid #76BD26 !important;
 }
 .z-input-clear {
   position: relative;
@@ -1708,10 +1708,10 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   cursor: default;
 }
 .z-textarea.error {
-  border: 0.0625rem solid #F52525;
+  border: 0.0625rem solid #F52525 !important;
 }
 .z-textarea.success {
-  border: 0.0625rem solid #76BD26;
+  border: 0.0625rem solid #76BD26 !important;
 }
 
 .z-switch {
@@ -3568,7 +3568,7 @@ svg path.connector.hidden {
   background: #339AF0;
 }
 .z-validation.error {
-  border: 0.0625rem solid #FEF2EB;
+  border: 0.0625rem solid #FEF2EB !important;
   color: #F52525;
   background-color: #FEF2EB;
   background-image: url("../media/icons/validation/icon_error.svg");
