--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -1894,10 +1894,10 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   cursor: default;
 }
 .z-input.error {
-  border: 0.0625rem solid #F52525;
+  border: 0.0625rem solid #F52525 !important;
 }
 .z-input.success {
-  border: 0.0625rem solid #76BD26;
+  border: 0.0625rem solid #76BD26 !important;
 }
 .z-input-clear {
   position: relative;
@@ -2031,10 +2031,10 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   cursor: default;
 }
 .z-textarea.error {
-  border: 0.0625rem solid #F52525;
+  border: 0.0625rem solid #F52525 !important;
 }
 .z-textarea.success {
-  border: 0.0625rem solid #76BD26;
+  border: 0.0625rem solid #76BD26 !important;
 }
 
 .z-switch {
@@ -3604,7 +3604,7 @@ select {
   background: #339AF0;
 }
 .z-validation.error {
-  border: 0.0625rem solid #FEF2EB;
+  border: 0.0625rem solid #FEF2EB !important;
   color: #F52525;
   background-color: #FEF2EB;
   background-image: url("../media/icons/validation/icon_error.svg");
@@ -4994,7 +4994,7 @@ select {
   font-weight: bold;
 }
 .ql-wrapper-container .ql-container.error {
-  border: 0.0625rem solid #F52525;
+  border: 0.0625rem solid #F52525 !important;
 }
 .ql-wrapper-container.ql-border-disabled .ql-toolbar.ql-snow {
   border-color: transparent;
@@ -5918,7 +5918,8 @@ body.modal-active {
 
 .z-component-tooltip {
   position: relative;
-  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
+  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12
+          + (var(--data-column) - 1) * 0px);
   padding: 0.375rem 0.5rem;
   margin: 0.5rem;
   border: 0.0625rem dashed #CFD5D9;
@@ -5954,7 +5955,8 @@ body.modal-active {
   width: 100%;
 }
 .z-component .z-component-label {
-  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
+  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12
+          + (var(--data-column) - 1) * 0px);
   justify-content: var(--data-align);
   padding: 0.4375rem 0.938rem 0.4375rem 0;
 }
@@ -5965,7 +5967,8 @@ body.modal-active {
   display: none;
 }
 .z-component .z-element {
-  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
+  flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12
+          + (var(--data-column) - 1) * 0px);
   padding: 0.4375rem 0;
   pointer-events: none;
 }
@@ -6185,7 +6188,8 @@ body.modal-active {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  flex-basis: calc(((100% - 44px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 4px);
+  flex-basis: calc(((100% - 44px) * var(--data-column, 12)) / 12
+          + (var(--data-column) - 1) * 4px);
   margin: 0.9375rem 0 0 0;
 }
 .property .property-label {
