--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1229,10 +1229,10 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   cursor: default;
 }
 .z-input.error {
-  border: 0.0625rem solid #F52525;
+  border: 0.0625rem solid #F52525 !important;
 }
 .z-input.success {
-  border: 0.0625rem solid #76BD26;
+  border: 0.0625rem solid #76BD26 !important;
 }
 .z-input-clear {
   position: relative;
@@ -1366,10 +1366,10 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
   cursor: default;
 }
 .z-textarea.error {
-  border: 0.0625rem solid #F52525;
+  border: 0.0625rem solid #F52525 !important;
 }
 .z-textarea.success {
-  border: 0.0625rem solid #76BD26;
+  border: 0.0625rem solid #76BD26 !important;
 }
 
 .z-switch {
@@ -3919,7 +3919,7 @@ select {
   background: #339AF0;
 }
 .z-validation.error {
-  border: 0.0625rem solid #FEF2EB;
+  border: 0.0625rem solid #FEF2EB !important;
   color: #F52525;
   background-color: #FEF2EB;
   background-image: url("../../../media/icons/validation/icon_error.svg");
@@ -5483,7 +5483,7 @@ select {
   font-weight: bold;
 }
 .ql-wrapper-container .ql-container.error {
-  border: 0.0625rem solid #F52525;
+  border: 0.0625rem solid #F52525 !important;
 }
 .ql-wrapper-container.ql-border-disabled .ql-toolbar.ql-snow {
   border-color: transparent;
