--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -214,11 +214,11 @@ input, textarea, select {
   }
 
   &.error {
-    @include border($validation-error-border-width, solid, $validation-error-border-color, all);
+    @include border($validation-error-border-width, solid, $validation-error-border-color !important, all);
   }
 
   &.success {
-    @include border($validation-success-border-width, solid, $validation-success-border-color, all);
+    @include border($validation-success-border-width, solid, $validation-success-border-color !important, all);
   }
 
   &-clear {
@@ -350,11 +350,11 @@ input, textarea, select {
   }
 
   &.error {
-    @include border($validation-error-border-width, solid, $validation-error-border-color, all);
+    @include border($validation-error-border-width, solid, $validation-error-border-color !important, all);
   }
 
   &.success {
-    @include border($validation-success-border-width, solid, $validation-success-border-color, all);
+    @include border($validation-success-border-width, solid, $validation-success-border-color !important, all);
   }
 }
 
