--- a/src/main/resources/public/scss/template/_text-editor.scss
+++ b/src/main/resources/public/scss/template/_text-editor.scss
@@ -302,7 +302,7 @@
     }
     // 유효성 검증 실패시
     &.error {
-      @include border($validation-error-border-width, solid, $validation-error-border-color, all);
+      @include border($validation-error-border-width, solid, $validation-error-border-color !important, all);
     }
   }
 
