트리페이지 말줄임 적용 및 화면 늘어짐 수정

--- a/src/main/resources/public/scss/template/_tree.scss
+++ b/src/main/resources/public/scss/template/_tree.scss
@@ -23,6 +23,11 @@ ul.tree {
     display: block;
     line-height: $tree-line-height;
     padding-right: 0.125rem; // 2px
+
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    word-wrap: normal;
   }
   // Level 2
   // -------------------------
