--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -325,6 +325,7 @@
     display: flex;
     flex: 1; // flex: 1 1 0;
     padding: 0 1.875rem; // 30px
+    width: 50%;
     &:first-child {
       padding-left: 3.75rem; // 60PX
     }
