#11241 - 검색 시 검색 결과가 searchValue가 아닌 기본 입력되있는 값으로 출력
* 팀장님께 문의 결과, 기존 코드는 기존값에서 검색한 값으로 치환하여 결과물을 보여주므로, 대 소문자 구분없이 검색을 하면 대문자는 소문자로, 소문자는 대문자로 바뀌어 결과화면이 출력될 수 있다 하였음.

- .exec메소드를 이용해 검색하는 값과 일치하는 문자열을 추출을 하였고, 추출한 값을 replace를 이용해 span태그로 감싸 파란색 글씨로 출력하게 하였다.

--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -200,16 +200,22 @@
                         }
                     });
 
-                    const searchValue = document.getElementById('searchValue').value;
-
+                    /*
+                     * 포탈 검색 시, 검색한 내용 파란글씨로 출력
+                     */
                     if (isNotEmpty('searchValue')) {
+                        const searchValue = document.getElementById('searchValue').value;
                         document.querySelectorAll('.z-card-row > .z-card-item-box > .z-card-item-title > a').forEach(function(data) {
+                            const searchTarget = data.innerHTML;
                             const regex = new RegExp(searchValue, 'gi');
-                            data.innerHTML = data.textContent.replace(regex, "<span class='keyword'>" + searchValue + "</span>");
+                            const resultTarget = regex.exec(searchTarget);
+                            data.innerHTML = data.textContent.replace(regex, "<span class='keyword'>" + resultTarget + "</span>");
                         });
                         document.querySelectorAll('.z-card-row > .z-card-item-box > .z-card-item-content > .text-ellipsis').forEach(function(data) {
+                            const searchTarget = data.innerHTML;
                             const regex = new RegExp(searchValue, 'gi');
-                            data.innerHTML = data.textContent.replace(regex, "<span class='keyword'>" + searchValue + "</span>");
+                            const resultTarget = regex.exec(searchTarget);
+                            data.innerHTML = data.textContent.replace(regex, "<span class='keyword'>" + resultTarget + "</span>");
                         });
                     }
                 }
