메세지로 되어있는 다국어수정 (자료실, FAQ)

--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -21,7 +21,7 @@
                     <span class="required"></span>
                 </label>
                 <select id="faqGroup" name="faqGroup" required="required">
-                    <option th:each="faqGroup :${faqGroupList}" th:text="#{|common.code.${faqGroup.code}|}"
+                    <option th:each="faqGroup :${faqGroupList}" th:text="${faqGroup.codeName}"
                             th:value="${faqGroup.code}" th:selected="${faqGroup.code} == ${faq?.faqGroup}">
                     </option>
                 </select>
