#11250 - 최대길이, 최소길이 입력에 따른 조건 추가

--- a/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
@@ -142,7 +142,13 @@
                         url += '/' + /*[[${attribute?.attributeId}]]*/'';
                         data.attributeId = /*[[${attribute?.attributeId}]]*/'';
                     }
-                    data.attributeValue = zCmdbAttribute.setDetails(data.attributeType);
+
+                    let tempDetails = zCmdbAttribute.setDetails(data.attributeType);
+                    if (!tempDetails) {
+                        return false;
+                    }else {
+                        data.attributeValue = tempDetails;
+                    }
                     restSubmit(method, url, data);
                 }
             } else if (method === 'delete') {
