--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -107,8 +107,9 @@
                     conditionInput.disabled = true;
 
                     const equalSpan = document.createElement('span');
-                    equalSpan.classList.add('equal', 'ml-1', 'mr-1');
-                    equalSpan.textContent = '=';
+                    equalSpan.classList.add('equal', 'align-center', 'col-1');
+                    equalSpan.value = getColumnName(condition[data].conditionOperator);
+                    equalSpan.value !== "equal" ? equalSpan.textContent = '!=' : equalSpan.textContent = '=';
 
                     const valueInput = document.createElement('input');
                     valueInput.classList.add('z-input', 'col-6');
