--- a/src/main/resources/public/template/numbering-pattern/numberingPatternSearch.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternSearch.html
@@ -36,7 +36,7 @@
         OverlayScrollbars(document.querySelector('.numbering-pattern-content-edit'), {className: 'scrollbar'});
     };
 
-    /** 패턴 리스트 출력 기능 **/
+    /** 문서번호 리스트 출력 기능 **/
     function getList(pageNum = 1) {
         const data = {
             search: encodeURIComponent(document.getElementById('searchValue').value)
@@ -48,6 +48,7 @@
             showProgressbar: false,
             callbackFunc: function (response) {
                 document.getElementById('patternList').innerHTML = response.responseText;
+                setDateTimeFormat(document.getElementById('patternList'));
             }
         };
         aliceJs.sendXhr(opt);
